fix：接口登录校验！

--- a/samples/web/Liuliu.Demo.Web/appsettings.Development.json
+++ b/samples/web/Liuliu.Demo.Web/appsettings.Development.json
@@ -11,23 +11,23 @@
   },
   "OSharp": {
     "DbContexts": {
-      "SqlServer": {
-        "DbContextTypeName": "OSharp.Entity.DefaultDbContext,OSharp.EntityFrameworkCore",
-        "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=osharpns-dev01;Trusted_Connection=True;MultipleActiveResultSets=true",
-        "DatabaseType": "SqlServer",
-        "LazyLoadingProxiesEnabled": true,
-        "AuditEntityEnabled": true,
-        "AutoMigrationEnabled": true
-      }
-      //,
-      //"MySql": {
+      //"SqlServer": {
       //  "DbContextTypeName": "OSharp.Entity.DefaultDbContext,OSharp.EntityFrameworkCore",
-      //  "ConnectionString": "Server=127.0.0.1;UserId=root;Password=abc123456;Database=osharpns-dev3;charset='utf8';Allow User Variables=True",
-      //  "DatabaseType": "MySql",
+      //  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=osharpns-dev01;Trusted_Connection=True;MultipleActiveResultSets=true",
+      //  "DatabaseType": "SqlServer",
       //  "LazyLoadingProxiesEnabled": true,
       //  "AuditEntityEnabled": true,
       //  "AutoMigrationEnabled": true
       //}
+      //,
+      "MySql": {
+        "DbContextTypeName": "OSharp.Entity.DefaultDbContext,OSharp.EntityFrameworkCore",
+        "ConnectionString": "Server=192.168.66.192;User Id=root;Password=;Database=osharpns-dev3;", //charset='utf8';Allow User Variables=True
+        "DatabaseType": "MySql",
+        "LazyLoadingProxiesEnabled": true,
+        "AuditEntityEnabled": true,
+        "AutoMigrationEnabled": false
+      }
       //,
       //"Sqlite": {
       //  "DbContextTypeName": "OSharp.Entity.DefaultDbContext,OSharp.EntityFrameworkCore",
