fix：MVC项目数据库配置！

--- a/samples/web/Liuliu.Demo.Mvc/appsettings.Development.json
+++ b/samples/web/Liuliu.Demo.Mvc/appsettings.Development.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
@@ -7,16 +7,24 @@
   },
   "OSharp": {
     "DbContexts": {
-"SqlServer": {
-  "DbContextTypeName": "OSharp.Entity.DefaultDbContext,OSharp.EntityFrameworkCore",
-  //"ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=osharp-mvc-dev02;Trusted_Connection=True;MultipleActiveResultSets=true",
-  "ConnectionString": "Data Source=osharp-mvc-dev.db",
-  "DatabaseType": "Sqlite",
-  "LazyLoadingProxiesEnabled": true,
-  "DateTimeUtcFormatEnabled": true,
-  "AuditEntityEnabled": true,
-  "AutoMigrationEnabled": true
-}
+      //"SqlServer": {
+      //  "DbContextTypeName": "OSharp.Entity.DefaultDbContext,OSharp.EntityFrameworkCore",
+      //  //"ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=osharp-mvc-dev02;Trusted_Connection=True;MultipleActiveResultSets=true",
+      //  "ConnectionString": "Data Source=osharp-mvc-dev.db",
+      //  "DatabaseType": "Sqlite",
+      //  "LazyLoadingProxiesEnabled": true,
+      //  "DateTimeUtcFormatEnabled": true,
+      //  "AuditEntityEnabled": true,
+      //  "AutoMigrationEnabled": true
+      //}
+      "MySql": {
+        "DbContextTypeName": "OSharp.Entity.DefaultDbContext,OSharp.EntityFrameworkCore",
+        "ConnectionString": "Server=192.168.66.192;User Id=root;Password=;Database=osharpns-dev3;", //charset='utf8';Allow User Variables=True
+        "DatabaseType": "MySql",
+        "LazyLoadingProxiesEnabled": true,
+        "AuditEntityEnabled": true,
+        "AutoMigrationEnabled": false
+      }
     },
     "Jwt": {
       "Issuer": "osharp identity",
