--- a/samples/web/Liuliu.Demo.Web/appsettings.Development.json
+++ b/samples/web/Liuliu.Demo.Web/appsettings.Development.json
@@ -2,11 +2,11 @@
   "Logging": {
     "IncludeScopes": true,
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Debug",
-      "OSharp": "Debug",
-      "Liuliu": "Debug"
+      "Default": "Information",
+      //"System": "Information",
+      "Microsoft": "Warning",
+      "OSharp": "Information"
+      //"Liuliu": "Debug"
     }
   },
   "OSharp": {
@@ -81,9 +81,13 @@
       "Issuer": "osharp identity",
       "Audience": "osharp angular demo",
       "Secret": "{8619F7C3-B53C-4B85-99F0-983D351ECD82}",
-      "AccessExpireMins": 5,
-      "RefreshExpireMins": 10080, // 7天
-      "IsRefreshAbsoluteExpired": false
+      "AccessExpireMins": 120,    //120分钟
+      "RefreshExpireMins": 10080, //7天
+      "IsRefreshAbsoluteExpired": false,
+      "Enabled": true
+    },
+    "Cookie": {
+      "Enabled": true  //启用缓存，提供浏览器写入缓存
     },
     "Redis": {
       "Configuration": "localhost",
