--- a/samples/web/Liuliu.Demo.Web/Properties/launchSettings.json
+++ b/samples/web/Liuliu.Demo.Web/Properties/launchSettings.json
@@ -19,10 +19,11 @@
     "Liuliu.Demo.Web": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "swagger/index.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "http://localhost:5001;"
     }
   }
 }
