--- a/samples/web/Liuliu.Demo.Web/appsettings.Development.json
+++ b/samples/web/Liuliu.Demo.Web/appsettings.Development.json
@@ -22,7 +22,7 @@
       //,
       "MySql": {
         "DbContextTypeName": "OSharp.Entity.DefaultDbContext,OSharp.EntityFrameworkCore",
-        "ConnectionString": "Server=192.168.66.192;User Id=root;Password=;Database=osharpns-dev3;", //charset='utf8';Allow User Variables=True
+        "ConnectionString": "Server=192.168.66.192;User Id=root;Password=;Database=osharpns-dev3;charset='utf8';Allow User Variables=True",
         "DatabaseType": "MySql",
         "LazyLoadingProxiesEnabled": true,
         "AuditEntityEnabled": true,
